Fix spacing on fieldset hint

--- a/src/nationalarchives/components/fieldset/fieldset.scss
+++ b/src/nationalarchives/components/fieldset/fieldset.scss
@@ -15,7 +15,7 @@
     padding: 0;
   }
 
-  &__hint {
+  & &__hint {
     margin-top: spacing.space(0.5);
     margin-bottom: spacing.space(1);
   }
